# Internal typhoon environment api

[build-system]
requires = ["setuptools", "Cython==3.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Test_for_gens"
authors = [{name = "Tiarles, o Brabo"}]
description = "Test for generators after cythonization"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
